crates/engine/src/parser/oracle_static/snapshots/engine__parser__oracle_static__snapshot_tests__havi_historic_graveyard_gate.snap
---
source: crates/engine/src/parser/oracle_static/snapshot_tests.rs
expression: "&def"
---
{
  "mode": "Continuous",
  "affected": {
    "type": "SelfRef"
  },
  "modifications": [
    {
      "type": "AddKeyword",
      "keyword": "Indestructible"
    }
  ],
  "condition": {
    "type": "QuantityComparison",
    "lhs": {
      "type": "Ref",
      "qty": {
        "type": "ZoneCardCount",
        "zone": "Graveyard",
        "card_types": [],
        "filter": {
          "type": "Typed",
          "type_filters": [
            "Card"
          ],
          "controller": null,
          "properties": [
            {
              "type": "Historic"
            }
          ]
        },
        "scope": "Controller"
      }
    },
    "comparator": "GE",
    "rhs": {
      "type": "Fixed",
      "value": 4
    }
  },
  "affected_zone": null,
  "effect_zone": null,
  "active_zones": [],
  "characteristic_defining": false,
  "description": "Havi has indestructible as long as there are four or more historic cards in your graveyard."
}
