crates/engine/src/parser/oracle_static/snapshots/engine__parser__oracle_static__snapshot_tests__static_conditional_as_long_as.snap
---
source: crates/engine/src/parser/oracle_static/mod.rs
assertion_line: 15899
expression: def
---
{
  "mode": "Continuous",
  "affected": {
    "type": "SelfRef"
  },
  "modifications": [
    {
      "type": "AddPower",
      "value": 2
    },
    {
      "type": "AddToughness",
      "value": 2
    }
  ],
  "condition": {
    "type": "IsPresent",
    "filter": {
      "type": "Typed",
      "type_filters": [
        "Creature"
      ],
      "controller": "You",
      "properties": [
        {
          "type": "Another"
        },
        {
          "type": "InZone",
          "zone": "Battlefield"
        }
      ]
    }
  },
  "affected_zone": null,
  "effect_zone": null,
  "active_zones": [],
  "characteristic_defining": false,
  "description": "~ gets +2/+2 as long as you control another creature."
}
