crates/engine/src/parser/oracle_static/snapshots/engine__parser__oracle_static__snapshot_tests__static_extra_blockers_group_grant.snap
---
source: crates/engine/src/parser/oracle_static/snapshot_tests.rs
expression: "&def"
---
{
  "mode": "Continuous",
  "affected": {
    "type": "Typed",
    "type_filters": [
      "Creature"
    ],
    "controller": "You",
    "properties": []
  },
  "modifications": [
    {
      "type": "AddStaticMode",
      "mode": {
        "ExtraBlockers": {
          "count": 1
        }
      }
    }
  ],
  "condition": null,
  "affected_zone": null,
  "effect_zone": null,
  "active_zones": [],
  "characteristic_defining": false,
  "description": "Each creature you control can block an additional creature each combat."
}
